crates/arity-parser/tests/snapshots/parser_snapshots__if_missing_rparen_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..8
  IF_EXPR@0..7
    IF_KW@0..2 "if"
    WHITESPACE@2..3 " "
    LPAREN@3..4 "("
    IDENT@4..5 "x"
    WHITESPACE@5..6 " "
    IDENT@6..7 "y"
  NEWLINE@7..8 "\n"
