crates/arity-parser/tests/snapshots/parser_snapshots__if_missing_rparen_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected ')' after if condition",
        start: 0,
        end: 2,
    },
]
