crates/arity-parser/tests/snapshots/parser_snapshots__if_missing_then_expr_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..14
  IF_EXPR@0..13
    IF_KW@0..2 "if"
    WHITESPACE@2..3 " "
    LPAREN@3..4 "("
    IDENT@4..5 "x"
    RPAREN@5..6 ")"
    WHITESPACE@6..7 " "
    ERROR@7..7
    ELSE_KW@7..11 "else"
    WHITESPACE@11..12 " "
    IDENT@12..13 "y"
  NEWLINE@13..14 "\n"
