crates/arity-parser/tests/snapshots/parser_snapshots__if_simple_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..9
  IF_EXPR@0..8
    IF_KW@0..2 "if"
    WHITESPACE@2..3 " "
    LPAREN@3..4 "("
    IDENT@4..5 "x"
    RPAREN@5..6 ")"
    WHITESPACE@6..7 " "
    IDENT@7..8 "y"
  NEWLINE@8..9 "\n"
