crates/arity-parser/tests/snapshots/parser_snapshots__pipe_precedence_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..22
  BINARY_EXPR@0..10
    IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    PLUS@2..3 "+"
    WHITESPACE@3..4 " "
    BINARY_EXPR@4..10
      INT@4..5 "1"
      WHITESPACE@5..6 " "
      PIPE@6..8 "|>"
      WHITESPACE@8..9 " "
      IDENT@9..10 "f"
  NEWLINE@10..11 "\n"
  BINARY_EXPR@11..21
    BINARY_EXPR@11..17
      IDENT@11..12 "x"
      WHITESPACE@12..13 " "
      PIPE@13..15 "|>"
      WHITESPACE@15..16 " "
      IDENT@16..17 "f"
    WHITESPACE@17..18 " "
    PLUS@18..19 "+"
    WHITESPACE@19..20 " "
    INT@20..21 "1"
  NEWLINE@21..22 "\n"
