crates/arity-parser/tests/snapshots/parser_snapshots__pipe_simple_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..7
  BINARY_EXPR@0..6
    IDENT@0..1 "x"
    WHITESPACE@1..2 " "
    PIPE@2..4 "|>"
    WHITESPACE@4..5 " "
    IDENT@5..6 "f"
  NEWLINE@6..7 "\n"
